# robi_final_project

./: README.md
aruco_ros/aruco/: package.xml
dynamic_introspection/: CHANGELOG.rst  CMakeLists.txt  package.xml
dynamic_introspection/include/dynamic_introspection/: dynamic_introspection.h  dynamic_introspection_utils.h  introspection_online_utils.h
dynamic_introspection/matlab/: read_introspection_bag.m
dynamic_introspection/src/: dynamic_introspection.cpp  dynamic_introspection_utils.cpp  introspection_online_utils.cpp
dynamic_introspection/test/: test_class_a.h  test_class_abstract.h  test_class_b.h
gazebo_ros_pkgs/gazebo_dev/: CHANGELOG.rst  package.xml
gazebo_ros_pkgs/gazebo_msgs/: CHANGELOG.rst  package.xml
gazebo_ros_pkgs/gazebo_plugins/: CHANGELOG.rst  package.xml
gazebo_ros_pkgs/gazebo_ros/: CHANGELOG.rst  package.xml
gazebo_ros_pkgs/gazebo_ros_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
gazebo_ros_pkgs/gazebo_ros_control/include/gazebo_ros_control/internal/: joint_state.h
gazebo_ros_pkgs/gazebo_ros_control/src/: gazebo_ros_control_plugin.cpp
gazebo_ros_pkgs/gazebo_ros_control/src/internal/: joint_state.cpp
gazebo_ros_pkgs/gazebo_ros_pkgs/: CHANGELOG.rst  package.xml
pal_gazebo_plugins/: CHANGELOG.rst  package.xml
pal_gazebo_plugins/src/: gazebo_attachment.cpp  gazebo_harness.cpp  gazebo_pal_hand.cpp  gazebo_ros_forcetorque.cpp  gazebo_underactuated_finger.cpp  gazebo_wifi_ap.cpp  gazebo_world_odometry.cpp
pal_gazebo_worlds/worlds/: pick_place_demo.world
pal_hardware_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_hardware_gazebo/src/: pal_hardware_gazebo.cpp
pal_hardware_interfaces/: package.xml
pal_msgs/pal_behaviour_msgs/: CHANGELOG.rst  package.xml
pal_msgs/pal_common_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_msgs/pal_control_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_msgs/pal_control_msgs/msg/: OperationalSpaceGoal.msg
pal_msgs/pal_detection_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_msgs/pal_device_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_msgs/pal_interaction_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_msgs/pal_motion_model_msgs/: CHANGELOG.rst  package.xml
pal_msgs/pal_msgs/: CHANGELOG.rst  package.xml
pal_msgs/pal_multirobot_msgs/: CHANGELOG.rst  package.xml
pal_msgs/pal_navigation_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_msgs/pal_simulation_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_msgs/pal_tablet_msgs/: CHANGELOG.rst  package.xml
pal_msgs/pal_video_recording_msgs/: CHANGELOG.rst  package.xml
pal_msgs/pal_vision_msgs/: CHANGELOG.rst  package.xml
pal_msgs/pal_visual_localization_msgs/: CHANGELOG.rst  package.xml
pal_msgs/pal_walking_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_msgs/pal_walking_msgs/msg/: ContactState.msg  SMStatus.msg
pal_msgs/pal_walking_msgs/srv/: MoveHipFeet.srv  Sit.srv  StepOver.srv
pal_msgs/pal_web_msgs/: CHANGELOG.rst  package.xml
pal_msgs/pal_wifi_localization_msgs/: CHANGELOG.rst  package.xml
pal_navigation_cfg_public/pal_navigation_cfg_pmb2/: package.xml
pal_navigation_cfg_public/pal_navigation_cfg_tiago/: package.xml
pal_navigation_sm/launch/: pal_navigation_sm.launch
pal_navigation_sm/scripts/: base_maps_symlink.sh  cp_maps_to_home.sh  cp_pose_to_home.sh  navigation.sh
pal_wsg_gripper/pal_wsg_gripper/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_wsg_gripper/pal_wsg_gripper_controller_configuration/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_wsg_gripper/pal_wsg_gripper_controller_configuration/config/: current_limit_controllers.yaml  current_limit_controllers_left.yaml  current_limit_controllers_right.yaml  gripper_left_fingertip_sensor_controller.yaml  gripper_left_left_fingertip_sensor_controller.yaml  gripper_left_right_fingertip_sensor_controller.yaml  gripper_right_fingertip_sensor_controller.yaml  gripper_right_left_fingertip_sensor_controller.yaml  gripper_right_right_fingertip_sensor_controller.yaml  joint_trajectory_controllers.yaml  pids.yaml
pal_wsg_gripper/pal_wsg_gripper_controller_configuration/launch/: current_limit_controllers.launch  gripper_controller.launch  gripper_fingertip_sensor_controller.launch
pal_wsg_gripper/pal_wsg_gripper_controller_configuration_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_wsg_gripper/pal_wsg_gripper_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_wsg_gripper/pal_wsg_gripper_description/config/: gripper.rviz
pal_wsg_gripper/pal_wsg_gripper_description/gazebo/: gazebo.urdf.xacro
pal_wsg_gripper/pal_wsg_gripper_description/launch/: gripper_kinematics_test.launch
pal_wsg_gripper/pal_wsg_gripper_description/meshes/: gripper_finger_link.dae  gripper_link.dae
pal_wsg_gripper/pal_wsg_gripper_description/robots/: gripper_wsg_test.urdf.xacro  upload_gripper.launch
pal_wsg_gripper/pal_wsg_gripper_description/urdf/: deg_to_rad.urdf.xacro  fingertip_sensor.urdf.xacro  gripper.gazebo.xacro  gripper.transmission.xacro  gripper.urdf.xacro  materials.urdf.xacro
pal_wsg_gripper/pal_wsg_gripper_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_wsg_gripper/pal_wsg_gripper_gazebo/launch/: gripper_gazebo.launch  gripper_spawn.launch
pmb2_navigation/pmb2_2dnav/: package.xml
pmb2_navigation/pmb2_laser_sensors/: package.xml
pmb2_robot/pmb2_bringup/: package.xml
robot_pose/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
robot_pose/src/: distance_publisher.cpp  pose_publisher.cpp
robot_pose/test/: distance_travelled.test  gtest_distance_travelled.cpp  gtest_robot_pose.cpp  robot_pose.test
robotics_project/: CMakeLists.txt  setup.py
roboticsgroup_gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
roboticsgroup_gazebo_plugins/src/: mimic_joint_plugin.cpp
simple_grasping_action/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
simple_grasping_action/scripts/: simple_grasping_action
simple_grasping_action/src/simple_grasping_action/: simple_grasping_action.py
tiago_description_calibration/: CHANGELOG.rst  package.xml
(+125 files in other folders)
