<?xml version="1.0"?>
<package format="2">
  <name>dynamic_introspection</name>
  <version>1.0.11</version>
  <description>The dynamic_introspection package</description>

  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tomé</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>cmake_modules</depend>
  <depend>message_generation</depend>
  <depend>visualization_msgs</depend>
  <depend>eigen</depend>
  <depend>pal_statistics</depend>
  <depend>backward_ros</depend>
  <depend>std_msgs</depend>

</package>
