<?xml version="1.0"?>
<package format="2">
  <name>robot_pose</name>
  <version>1.0.2</version>
  <description>The robot_pose package</description>
  <maintainer email="procopio.stein@pal-robotics.com">Procópio Stein</maintainer>
  <license>Modified BSD</license>
  <author email="procopio.stein@pal-robotics.com">Procópio Stein</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>pal_statistics</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>rostest</test_depend>

</package>
