<?xml version="1.0"?>
<package>
  <name>pal_wsg_gripper_controller_configuration</name>
  <version>0.0.9</version>
  <description>Configuration of the controllers for the Schunk WSG gripper</description>

  <author email="jordi.pages@pal-robotics.com">Jordi Pages</author>
  <maintainer email="tiago-support@pal-robotics.com">TIAGo support team</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>

</package>

