<?xml version="1.0"?>
<package>
  <name>pal_wsg_gripper_gazebo</name>
  <version>0.0.9</version>
  <description>Gazebo simulation package for PAL Schunk wsg gripper</description>

  <author email="jordi.pages@pal-robotics.com">Jordi Pages</author>
  <maintainer email="tiago-support@pal-robotics.com">TIAGo support team</maintainer>


  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>pal_hardware_gazebo</run_depend>
  <run_depend>pal_wsg_gripper_description</run_depend>
  <run_depend>roboticsgroup_gazebo_plugins</run_depend>

</package>

